prevent zooming on textbox input on mobile

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -735,3 +735,7 @@ input:checked + .slider {
 .gm-style .gm-style-iw-t::after {
     width: 0px !important;
 }
+
+input {
+    font-size: 16px;
+}
